--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "firebase": "^7.6.0",
     "jquery": "^3.4.1",
     "materialize": "^1.0.0",
     "materialize-css": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-materialize": "^3.5.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "stripe": "^7.14.0",
     "sweetalert2": "^9.5.3"
   },
   "scripts": {
