--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
+    "react-star-rating-component": "^1.4.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
